depand-shaping-k8s/e-shop example app/webapp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  
spec:
  ingressClassName: traefik
  rules:
    - host: webapp.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  webapp
                port:
                  number: 80
